--- a/styles/documentation.css
+++ b/styles/documentation.css
@@ -1,3 +1,86 @@
+*,
+*::before,
+*::after{
+  box-sizing: border-box;
+}
+
+:root{
+  --ff-primary: '';
+  --ff-secondary: '';
+
+  --fw-reg: 300;
+  --fw-bold: 900;
+  
+  --clr-light: #fff;
+  --clr-dark: #000;
+  --clr-acent: #16e0bd;
+
+  --fs-h1: 3rem;
+  --fs-h2: 2.25rem;
+  --fs-h3: 1.25rem;
+  --fs-body: 1rem;
+}
+
+@media (min-width: 800px) {
+  :root{
+    --fs-h1: 4.5;
+    --fs-h2: 3.75rem;
+    --fs-h3: 1.25.rem;
+    --fs-body: 1.125rem;
+  }
+}
+
+
+body{
+  color: var(--clr-dark);
+  margin: 0;
+  font-family: var(--ff-primary);
+  line-height: 1.6;
+}
+
+img{
+  display: block;
+  max-width: 100%;
+}
+
+strong { font-weight: var(--fw-bold) }
+
+h1,h2,h3{
+  line-height: 1.1;
+  margin: 0;
+}
+
+h1 { font-size: var(--fs-h1) }
+h2 { font-size: var(--fs-h2) }
+h3 { font-size: var(--fs-h3) }
+
+
+.section__title{
+  background: var(--clr-acent);
+  margin-bottom: .25em;
+}
+
+.section__title--intro{
+  background: var(--clr-acent);
+  font-weight: var(--fw-reg);
+}
+
+.section__title--intro strong{
+  display: block;
+}
+
+.section__subtitle{
+  margin: 0;
+  font-size: var(--fs-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about{
+  background: var(--clr-acent);
+  font-family: var(--ff-secondary);
+}
+
+
 /* The sidebar menu */
 .sidenav {
     height: 100%; /* Full-height: remove this if you want "auto" height */
