--- a/styles/index.css
+++ b/styles/index.css
@@ -64,7 +64,7 @@ strong { font-weight: var(--fw-bold) }
 
 /* Buttons */
 
-.btn {
+#button1 {
     display: inline-block;
     padding: .5em 2.5em;
     background: var(--clr-accent);
@@ -78,7 +78,7 @@ strong { font-weight: var(--fw-bold) }
     transition: transform 200ms ease-in-out;
 }
 
-.btn:hover {
+#button1:hover {
     transform: scale(1.1);
 }
 
