--- a/styles/quotemachine.css
+++ b/styles/quotemachine.css
@@ -9,12 +9,12 @@
   transition: all .6s;
 } */
 
-.border {
-  border: 6px solid #9CB418;
-  -webkit-box-shadow: 4px 4px 0 3px #7D9014;
-  -moz-box-shadow: 4px 4px 0 3px #7D9014;
-  box-shadow: 4px 4px 0 3px #7D9014;
-}
+/* .border {
+  border: 6px solid rgb(122, 104, 115);
+  -webkit-box-shadow: 4px 4px 0 3px rgb(122, 104, 115);
+  -moz-box-shadow: 4px 4px 0 3px rgb(122, 104, 115);
+  box-shadow: 4px 4px 0 3px rgb(122, 104, 115);
+} */
 
 /* .border-smaller {
   border: 4px solid #9CB418;
